monkeypatch rails to compress assets

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,12 @@
-= sprockets-font_compressor
+# sprockets-font_compressor
 
-Description goes here.
+Quick and dirty monkeypatch to enable precompression of Web Font related assets
 
-== Contributing to sprockets-font_compressor
- 
+Filetypes added to compression list:
+  otf, eot, svg, ttf, woff
+
+## Contributing to sprockets-font_compressor
+
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it.
 * Fork the project.
@@ -12,7 +15,7 @@ Description goes here.
 * Make sure to add tests for it. This is important so I don't break it in a future version unintentionally.
 * Please try not to mess with the Rakefile, version, or history. If you want to have your own version, or is otherwise necessary, that is fine, but please isolate to its own commit so I can cherry-pick around it.
 
-== Copyright
+## Copyright
 
 Copyright (c) 2013 Chetan Sarva. See LICENSE.txt for
 further details.
